# maplab_lightweight_filtering

./: CMakeLists.txt  package.xml
cmake/: lightweight_filteringConfig.cmake.in
