<?xml version="1.0"?>
<package  format="2">
  <name>lightweight_filtering</name>
  <description>Lightweight filtering library</description>
  <url>https://bitbucket.org/ethz-asl-lr/lightweight_filtering</url>
  <author>Michael Bloesch</author>
  <maintainer email="bloeschm@ethz.ch">Michael Bloesch</maintainer>
  <license>BSD</license>
  <version>0.0.9</version>
  <buildtool_depend>cmake</buildtool_depend>

  <depend>kindr</depend>
  <depend>eigen</depend>

  <export>
    <!-- Specify that this is not really a ROS package-->
    <build_type>cmake</build_type>
  </export>
</package>
